--- a/templates/register.html
+++ b/templates/register.html
@@ -24,6 +24,9 @@
             <input type="text" name="username" placeholder="Username:" required="required"> <br>
             <input type="password" name="password" placeholder="Password:" required="required">
             <input type="submit" value="Sign Up">
+
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+
         </form>
     </section>
 
